Fix animation overflow in art.html

--- a/css/animations.css
+++ b/css/animations.css
@@ -12,6 +12,11 @@
     to {transform: translateX(-25vw);}
 }
 
+@keyframes vibrate {
+    0%, 20%, 40%, 60%, 80%, 100%  {transform: translateX(10%);}
+    10%, 30%, 50%, 70%, 90% {transform: translateX(-10%);}
+}
+
 @keyframes spin {
     from {transform: rotate(0deg);}
     to {transform: rotate(360deg);}
