--- a/css/art.css
+++ b/css/art.css
@@ -9,7 +9,8 @@ svg {
 }
 
 .hero-squigg {
-    top: -100px;
+    width: auto;
+    top: 200px;
     right: calc(50vw - 720px);
 
     animation-name: move-leftright;
@@ -18,18 +19,51 @@ svg {
 }
 
 .hero-circle {
-    top: 150px;
+    top: 0;
     left: 100px;
     animation-name: spin;
     animation-duration: 2s;
 }
 
 .hero-banner-content {
-margin-top: 20vh;
+    margin-top: 20vh;
 }
 
 iframe {
     width: 100%;
     aspect-ratio: 3 / 2;
-    border: 20px solid var(--red);
+    border: 20px solid var(--green);
+}
+
+.wow-btn {
+    position: fixed;
+    width: fit-content;
+    bottom: 0;
+    left: 0;
+    background-color: var(--red);
+    border: none;
+    color: var(--black);
+    font-weight: bold;
+    padding: 20px;
+}
+
+.wow-clicked {
+    --s: 20vw;
+    /* control the size*/
+    --c1: var(--red);
+    --c2: var(--purple);
+
+    --_g: 80%, var(--c1) 25.4%, #0000 26%;
+    background:
+        radial-gradient(at 80% var(--_g)),
+        radial-gradient(at 20% var(--_g)),
+        conic-gradient(from -45deg at 50% 41%, var(--c1) 90deg, var(--c2) 0) calc(var(--s)/2) 0;
+    background-size: var(--s) var(--s);
+}
+
+.wow-clicked .wow-btn {
+    background-color: var(--yellow);
+    animation: vibrate;
+    animation-duration: 1s;
+    animation-timing-function: linear;
 }
