--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,18 @@
     --yellow: #ffe642;
     --green: #00cd59;
     --blue: #1444d3;
-    --purple: #5424cc;
+    --purple: #6e35fd;
     --black-20a: rgba(0, 0, 0, .2);
     --musty-green: #002e28;
 
 }
 
 body {
+    position: relative;
+    left: 0;
     min-height: 100vh;
     max-width: 100vw;
+    overflow-x: hidden;
 }
 
 h1,
@@ -51,38 +54,21 @@ p {
 
 /* Type scale setup by https://typescale.com/ */
 
-h1 {
-    font-size: 3.815rem;
-}
+h1 {font-size: 3.815rem;}
 
-h2 {
-    font-size: 3.052rem;
-}
+h2 {font-size: 3.052rem;}
 
-h3,
-h4 {
-    font-size: 2.441rem;
-}
+h3, h4 {font-size: 2.441rem;}
 
-h5 {
-    font-size: 1.953rem;
-}
+h5 {font-size: 1.953rem;}
 
-h6 {
-    font-size: 1.563rem;
-}
-
-
-
-button {
-    border-radius: 5px;
-}
+h6 {font-size: 1.563rem;}
 
 button a {
     display: inline-block;
     text-decoration: none;
     width: 100%;
-    padding: 10px;
+    padding: 20px;
 }
 
 table {
@@ -380,49 +366,6 @@ picture img {
     background-color: var(--primary);
 }
 
-.btn-reg a {
-    color: var(--white) !important;
-}
-
-.btn-reg a:hover {
-    color: var(--black);
-}
-
-.btn-reversed {
-    border: none;
-    background-color: var(--white);
-}
-
-.btn-reversed a {
-    color: var(--primary) !important;
-}
-
-.btn-reversed:hover {
-    background-color: var(--black);
-}
-
-.btn-reversed a:hover {
-    color: var(--white) !important;
-}
-
-.btn-ghost-reversed {
-    border: 1px solid var(--white);
-    background: none;
-}
-
-.btn-ghost-reversed a {
-    color: var(--white) !important;
-}
-
-.btn-ghost-reversed:hover {
-    background-color: var(--secondary);
-    border-color: var(--secondary);
-}
-
-.btn-ghost-reversed a:hover {
-    color: var(--black) !important;
-}
-
 
 
 .lightbox {
@@ -467,13 +410,6 @@ picture img {
 .lightbox-overlay,
 #lightbox-btn {
     display: none;
-}
-
-
-
-.ani-up {
-    transition: transform 0.4s ease-in-out;
-    transform: translateY(-16px);
 }
 
 
